# planck-v3

./: .flake8  CMakeLists.txt  pyproject.toml
src/geometry/: __init__.py  base.py  cartesian.py  smiles.py  zmatrix.py
src/hartree_fock/: __init__.py  base.py  integrals.py  rhf.py  uhf.py
src/integrals/: __init__.py  planck_integrals.cpp
unit_tests/: conftest.py  test_geometry_cartesian.py  test_hartree_fock_rhf.py  test_hartree_fock_uhf.py
