[build-system]
requires = ["scikit-build-core>=0.9.0", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "planck-v3"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
  "numpy",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
]

[tool.scikit-build]
# Build a pybind11 extension via CMake (see `CMakeLists.txt`).
wheel.packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["unit_tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = [
  "error::DeprecationWarning",
]
